--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 height="260"
                 class="section-team-photo"
               />
-              <div class="team-group>">
+              <div class="team-group">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="text-team">Product Designer</p>
               </div>
@@ -124,7 +124,7 @@
                 height="260"
                 class="section-team-photo"
               />
-              <div class="team-group>">
+              <div class="team-group">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="text-team">Frontend Developer</p>
               </div>
@@ -137,7 +137,7 @@
                 height="260"
                 class="section-team-photo"
               />
-              <div class="team-group>">
+              <div class="team-group">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="text-team">Marketing</p>
               </div>
@@ -150,7 +150,7 @@
                 height="260"
                 class="section-team-photo"
               />
-              <div class="team-group>">
+              <div class="team-group">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="text-team">UI Designer</p>
               </div>
